--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,10 @@
   <depend>boost</depend>
   <depend>visualization_msgs</depend>
 
+  <depend>launch</depend>
+  <depend>launch_ros</depend>
+  <depend>ament_index_python</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
